5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4372/executions/1832_1647.log
== TEST (2019-06-13 18:09:16) 
-- CODE:
for numby import
print(porcentagem de alunos:)
i=0
i=i+1

-- ERROR:
File "XXXX", line 1
    for numby import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:09:24) 
-- CODE:

print(porcentagem de alunos:)
i=0
i=i+1

-- ERROR:
File "XXXX", line 2
    print(porcentagem de alunos:)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:14:05) 
-- CODE:
print("numero de alunos: ")
i=0
i=i+1

-- OUTPUT:
numero de alunos:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:53:06) 
-- CODE:
f=array(eval(input("")))
	a=0
for v in f
	if v>=70
	a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if v>=70:
	va[i]=c
	i=i+1
	c=c+1
print(a)
print(va)
	
	
	
	


-- ERROR:
File "XXXX", line 2
    a=0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:53:14) 
-- CODE:
f=array(eval(input("")))
a=0
for v in f
	if v>=70
	a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if v>=70:
	va[i]=c
	i=i+1
	c=c+1
print(a)
print(va)
	
	
	
	


-- ERROR:
File "XXXX", line 3
    for v in f
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:53:30) 
-- CODE:
f=array(eval(input("")))
a=0
for v in f
	if v>=70
	a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if v>=70:
	va[i]=c
	i=i+1
	c=c+1
print(a)
print(va)
	
	
	
	


-- EXECUTION TIME:
0.551343
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 3
    for v in f
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:56:58) 
-- CODE:
for numby import
f=array(eval(input("")))
a=0
for v in f
	if v>=70
	a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if v>=70:
	va[i]=c
	i=i+1
	c=c+1
print(a)
print(va)
	
	
	
	


-- ERROR:
File "XXXX", line 1
    for numby import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:59:04) 
-- CODE:
for numby import
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f
	if (v>=70)
		a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- EXECUTION TIME:
0.875852
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 1
    for numby import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:00:06) 
-- CODE:
for numby import
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f
	if (v>=70)
		 a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- EXECUTION TIME:
0.722913
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 1
    for numby import
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:07) 
-- CODE:
for numby import
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f
	if (v>=70)
		 a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- ERROR:
File "XXXX", line 1
    for numby import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:18) 
-- CODE:
for numby import*
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f
	if (v>=70)
		 a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- ERROR:
File "XXXX", line 1
    for numby import*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:28) 
-- CODE:
for numpy import*
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f
	if (v>=70)
		 a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- ERROR:
File "XXXX", line 1
    for numpy import*
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:38) 
-- CODE:
from numpy import*
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f
	if (v>=70)
		 a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- ERROR:
File "XXXX", line 4
    for v in f
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:00:51) 
-- CODE:
from numpy import*
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f:
	if (v>=70)
		 a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- EXECUTION TIME:
0.624585
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 5
    if (v>=70)
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:52) 
-- CODE:
from numpy import*
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f:
	if (v>=70)
		 a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- ERROR:
File "XXXX", line 5
    if (v>=70)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:01:00) 
-- CODE:
from numpy import*
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f:
	if (v>=70):
		 a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:54) 
-- CODE:
from numpy import*
f=array(eval(input("vetor de frequencia: ")))
a=0
for v in f:
	if (v>=70):
		 a=a+1
va=zeros(a, dtype=int)
i=0
c=0
for v in f:
	if (v>=70):
		va[c]=i
		c=c+1
	i= i+1
print(a)
print(va)
	
	
	
	


-- EXECUTION TIME:
0.943424
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[2 3 5]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 3 4 6]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
